<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VTU CS Lab Manual</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_contributors">Contributors</string>
    <string name="action_about">About</string>
    <string name="action_license">License</string>



    <string name="title_activity_display">Manual</string>
    <string name="font_up">+</string>
    <string name="font_down">-</string>
    <string name="day_night">Day Mode</string>
    <string name="title_activity_show_license">License</string>
    <string name="title_activity_mark_down_test">MarkDownTest</string>

</resources>
