<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="1"
        android:showAsAction="always" >
        <menu>
            <item android:id="@+id/settings"
                android:title="@string/action_settings"
                android:orderInCategory="1"
                android:showAsAction="always" />
            <item android:id="@+id/contributors"
                android:title="@string/action_contributors"
                android:orderInCategory="2"
                android:showAsAction="always" />
            <item android:id="@+id/about"
                android:title="@string/action_about"
                android:orderInCategory="3"
                android:showAsAction="always" />
            <item android:id="@+id/license"
                android:title="@string/action_license"
                android:orderInCategory="4"
                android:showAsAction="always" />

        </menu>

    </item>


</menu>
