<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0099cc"
    tools:context="com.amabyte.vtucslabmanual.main.DisplayActivity"
    >


    <WebView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/webView"
        android:layout_gravity="left|top"
        />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/ParentLayout"
        >



        <LinearLayout android:id="@+id/fullscreen_content_controls"
            style="@style/ButtonBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            android:weightSum="2"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/TvFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:lines="1"
                android:layout_gravity="center_horizontal"
                android:padding="3dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="3"
                    tools:ignore="UselessParent">

                    <Button android:id="@+id/btn_font_up"
                        style="@style/ButtonBarButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/font_up"
                        android:onClick="btnFontUpOnClick"
                        android:textSize="30sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:background="@drawable/ic_font_size"
                        android:scaleType="fitCenter"
                        android:layout_margin="5dp"/>

                    <Button android:id="@+id/btn_font_down"
                        style="@style/ButtonBarButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="30sp"
                        android:onClick="btnFontDownOnClick"
                        android:text="@string/font_down" />

                </LinearLayout>

                <Button android:id="@+id/disp_btn_day_night"
                    style="@style/ButtonBarButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/day_night"
                    android:onClick="btnDayNightOnClick"
                    android:layout_weight="1">
                </Button>

            </LinearLayout>
        </LinearLayout>



    </FrameLayout>

</FrameLayout>
